5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4354/executions/1753_3092.log
== TEST (2019-05-16 18:17:17) 
-- CODE:
camp = input("digite o resultado")
camp = camp.lower
t = 0
while(camp != "x"):
	if(camp == "v"):
		soma = soma + 3
	if(camp == "e"):
		soma = soma + 2
	if(camp == "d"):
		soma = soma + 1
	t = t + 3
total = (camp/t)*100
print(round(total,2))
-- OUTPUT:
quantos trimestres
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:17:22) 
-- CODE:
camp = input("digite o resultado")
camp = camp.lower
t = 0
while(camp != "x"):
	if(camp == "v"):
		soma = soma + 3
	if(camp == "e"):
		soma = soma + 2
	if(camp == "d"):
		soma = soma + 1
	t = t + 3
total = (camp/t)*100
print(round(total,2))
-- OUTPUT:
quantos trimestres
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:18:03) 
-- CODE:
camp = input("digite o resultado")
camp = camp.lower
t = 0
while(camp != "x"):
	if(camp == "v"):
		soma = soma + 3
	if(camp == "e"):
		soma = soma + 2
	if(camp == "d"):
		soma = soma + 1
	t = t + 3
	camp = input("digite o resultado")
total = (camp/t)*100
print(round(total,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    soma = soma + 2
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:18:08) 
-- CODE:
camp = input("digite o resultado")
camp = camp.lower
t = 0
while(camp != "x"):
	if(camp == "v"):
		soma = soma + 3
	if(camp == "e"):
		soma = soma + 2
	if(camp == "d"):
		soma = soma + 1
	t = t + 3
	camp = input("digite o resultado")
total = (camp/t)*100
print(round(total,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    soma = soma + 2
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:18:17) 
-- CODE:
camp = input("digite o resultado: ")
camp = camp.lower
t = 0
while(camp != "x"):
	if(camp == "v"):
		soma = soma + 3
	if(camp == "e"):
		soma = soma + 2
	if(camp == "d"):
		soma = soma + 1
	t = t + 3
	camp = input("digite o resultado: ")
total = (camp/t)*100
print(round(total,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    soma = soma + 2
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:19:55) 
-- CODE:
camp = input("digite o resultado: ")
camp = camp.lower
t = 0
while(camp != "x"):
	if(camp == "v"):
		soma = soma + 3
	if(camp == "e"):
		soma = soma + 2
	if(camp == "d"):
		soma = soma + 1
	t = t + 3
	camp = input("digite o resultado: ")
total = (camp/t)*100
print(round(total,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    soma = soma + 2
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:20:13) 
-- CODE:
camp = input("digite o resultado: ")
camp = camp.lower
t = 0
soma = 0
while(camp != "x"):
	if(camp == "v"):
		soma = soma + 3
	if(camp == "e"):
		soma = soma + 2
	if(camp == "d"):
		soma = soma + 1
	t = t + 3
	camp = input("digite o resultado: ")
total = (camp/t)*100
print(round(total,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    camp = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:21:28) 
-- CODE:
camp = input("digite o resultado: ")
camp = camp.lower
t = 0
soma = 0
while(camp != "x"):
	if(camp == "v"):
		soma = soma + 3
	if(camp == "e"):
		soma = soma + 2
	if(camp == "d"):
		soma = soma + 1
	t = t + 3
	camp = input("digite o resultado: ")
	total = (camp/t)*100
print(round(total,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    total = (camp/t)*100
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:21:47) 
-- CODE:
camp = input("digite o resultado: ")
camp = camp.lower
t = 0
soma = 0
while(camp != "x"):
	if(camp == "v"):
		soma = soma + 3
	if(camp == "e"):
		soma = soma + 2
	if(camp == "d"):
		soma = soma + 1
	t = t + 3
	camp = input("digite o resultado: ")
total = (soma/t)*100
print(round(total,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    camp = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:21:57) 
-- CODE:
camp = input("digite o resultado: ")
camp = camp.lower
t = 0
soma = 0
while(camp != "x"):
	if(camp == "v"):
		soma = soma + 3
	if(camp == "e"):
		soma = soma + 2
	if(camp == "d"):
		soma = soma + 1
	t = t + 3
	camp = input("digite o resultado: ")
total = (soma/t)*100
print(round(total,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    camp = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:26:53) 
-- CODE:
camp = input("digite o resultado: ")
camp = camp.lower
t = 0
soma = 0
while(camp != "x"):
	if(camp == "v"):
		soma = soma + 3
	if(camp == "e"):
		soma = soma + 2
	if(camp == "d"):
		soma = soma + 1
	t = t + 3
	camp = input("digite o resultado: ")
total = (soma/t)
print(round(total,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    camp = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:27:53) 
-- CODE:
camp = input("digite o resultado: ")
camp = camp.lower
t = 0
v = 0
soma = 0
while(camp != "x"):
	if(camp == "v"):
		v = v + 3
	if(camp == "e"):
		v = v + 2
	if(camp == "d"):
		v = v + 1
	soma = soma + v
	t = t + 3
	camp = input("digite o resultado: ")
total = (soma/t)
print(round(total,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 15, in <module>
    camp = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:28:01) 
-- CODE:
camp = input("digite o resultado: ")
camp = camp.lower
t = 0
v = 0
soma = 0
while(camp != "x"):
	if(camp == "v"):
		v = v + 3
	if(camp == "e"):
		v = v + 2
	if(camp == "d"):
		v = v + 1
	soma = soma + v
	t = t + 3
	camp = input("digite o resultado: ")
total = (soma/t)
print(round(total,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 15, in <module>
    camp = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:30:40) 
-- CODE:
camp = input("digite o resultado: ")
camp = camp.lower
t = 0
v = 0
soma = 0
while(camp != "x"):
	if(camp == "v"):
		v = v + 3
	if(camp == "e"):
		v = v + 2
	if(camp == "d"):
		v = v + 1
	soma = soma + v
	t = t + 3
	camp = input("digite o resultado: ")
total = (soma/t)
print(round(total,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 15, in <module>
    camp = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:31:36) 
-- CODE:
camp = input("digite o resultado: ")
camp = camp.lower
t = 0
soma = 0
while(camp != "x"):
	if(camp == "v"):
		v = 3
	if(camp == "e"):
		v = 2
	if(camp == "d"):
		v = 1
	soma = soma + v
	t = t + 3
	camp = input("digite o resultado: ")
total = (soma/t)
print(round(total,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    soma = soma + v
NameError: name 'v' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:31:50) 
-- CODE:
camp = input("digite o resultado: ")
camp = camp.lower
t = 0
v = 0
soma = 0
while(camp != "x"):
	if(camp == "v"):
		v = 3
	if(camp == "e"):
		v = 2
	if(camp == "d"):
		v = 1
	soma = soma + v
	t = t + 3
	camp = input("digite o resultado: ")
total = (soma/t)
print(round(total,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 15, in <module>
    camp = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:34:32) 
-- CODE:
camp = input("digite o resultado: ")
camp = camp.lower
t = 0
v = 0
soma = 0
while(camp != "x"):
	if(camp == "v" or "e" or "d"):
		if(camp == "v"):
			v = 3
		if(camp == "e"):
			v = 2
		if(camp == "d"):
			v = 1
		soma = soma + v
		t = t + 3
	camp = input("digite o resultado: ")
total = (soma/t)
print(round(total,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    camp = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:36:12) 
-- CODE:
camp = input("digite o resultado: ")
camp = camp.lower
t = 0
v = 0
soma = 0
while(camp != "x"):
	if(camp == "v" or "e" or "d"):
		if(camp == "v"):
			v = 3
		if(camp == "e"):
			v = 2
		if(camp == "d"):
			v = 1
		soma = soma + v
		t = t + 3
		print(t)
	camp = input("digite o resultado: ")
total = (soma/t)*100
print(round(total,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 17, in <module>
    camp = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:36:23) 
-- CODE:
camp = input("digite o resultado: ")
camp = camp.lower
t = 0
v = 0
soma = 0
while(camp != "x"):
	if(camp == "v" or "e" or "d"):
		if(camp == "v"):
			v = 3
		if(camp == "e"):
			v = 2
		if(camp == "d"):
			v = 1
		soma = soma + v
		t = t + 3
		print(t)
		print(soma)
	camp = input("digite o resultado: ")
total = (soma/t)*100
print(round(total,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 18, in <module>
    camp = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:36:48) 
-- CODE:
camp = input("digite o resultado: ")
camp = camp.lower
t = 3
v = 0
soma = 0
while(camp != "x"):
	if(camp == "v" or "e" or "d"):
		if(camp == "v"):
			v = 3
		if(camp == "e"):
			v = 2
		if(camp == "d"):
			v = 1
		soma = soma + v
		t = t + 3
		print(t)
		print(soma)
	camp = input("digite o resultado: ")
total = (soma/t)*100
print(round(total,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 18, in <module>
    camp = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:37:26) 
-- CODE:
camp = input("digite o resultado: ")
camp = camp.lower
t = 0
v = 0
soma = 0
while(camp != "x"):
	if(camp == "v" or "e" or "d"):
		if(camp == "v"):
			v = 3
		if(camp == "e"):
			v = 2
		if(camp == "d"):
			v = 1
		soma = soma + v
		t = t + 3
		print(t)
		print(soma)
	camp = input("digite o resultado: ")
total = (soma/t)*100
print(round(total,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 18, in <module>
    camp = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:37:57) 
-- CODE:
camp = input("digite o resultado: ")
camp = camp.lower
t = 0
v = 0
soma = 0
while(camp != "x"):
	if(camp == "v" or "e" or "d"):
		if(camp == "v"):
			v = 3
		if(camp == "e"):
			v = 2
		if(camp == "d"):
			v = 1
		soma = soma + v
		t = t + 3
		print(t)
		print(soma)
	camp = input("digite o resultado: ")
total = (soma/t)*100
print(round(total,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 18, in <module>
    camp = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:38:30) 
-- CODE:
camp = input("digite o resultado: ")
camp = camp.lower
t = 0
v = 0
soma = 0
while(camp != "x"):
	if(camp == "v" or "e" or "d"):
		if(camp == "v"):
			v = 3
		if(camp == "e"):
			v = 2
		if(camp == "d"):
			v = 1
		soma = soma + v
		t = t + 3
		print(t)
		print(soma)
	else:
		t = t + 0
	camp = input("digite o resultado: ")
total = (soma/t)*100
print(round(total,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 20, in <module>
    camp = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:38:44) 
-- CODE:
camp = input("digite o resultado: ")
camp = camp.lower
t = 3
v = 0
soma = 0
while(camp != "x"):
	if(camp == "v" or "e" or "d"):
		if(camp == "v"):
			v = 3
		if(camp == "e"):
			v = 2
		if(camp == "d"):
			v = 1
		soma = soma + v
		t = t + 3
		print(t)
		print(soma)
	else:
		t = t + 0
	camp = input("digite o resultado: ")
total = (soma/t)*100
print(round(total,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 20, in <module>
    camp = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:38:59) 
-- CODE:
camp = input("digite o resultado: ")
camp = camp.lower
t = 3
v = 0
soma = 0
while(camp != "x"):
	if(camp == "v" or "e" or "d"):
		if(camp == "v"):
			v = 3
		if(camp == "e"):
			v = 2
		if(camp == "d"):
			v = 1
		soma = soma + v
		t = t + 3
		print(t)
		print(soma)
	else:
		t = t + 0
	camp = input("digite o resultado: ")
total = (soma/t)*100
print(round(total,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 20, in <module>
    camp = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:39:19) 
-- CODE:
camp = input("digite o resultado: ")
camp = camp.lower
t = 0
v = 0
soma = 0
while(camp != "x"):
	if(camp == "v" or "e" or "d"):
		if(camp == "v"):
			v = 3
		if(camp == "e"):
			v = 2
		if(camp == "d"):
			v = 1
		soma = soma + v
		t = t + 3
		print(t)
		print(soma)
	else:
		t = t + 0
	camp = input("digite o resultado: ")
total = (soma/t)*100
print(round(total,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 20, in <module>
    camp = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:40:31) 
-- CODE:
camp = input("digite o resultado: ")
camp = camp.lower
t = 0
v = 0
soma = 0
while(camp != "x"):
	if(camp == "v" or "e" or "d"):
		soma = soma + v
		if(camp == "v"):
			v = 3
		if(camp == "e"):
			v = 2
		if(camp == "d"):
			v = 1
		
		t = t + 3
		print(t)
		print(soma)
	else:
		t = t + 0
	camp = input("digite o resultado: ")
total = (soma/t)*100
print(round(total,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 21, in <module>
    camp = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:40:41) 
-- CODE:
camp = input("digite o resultado: ")
camp = camp.lower
t = 0
v = 0
soma = 0
while(camp != "x"):
	if(camp == "v" or "e" or "d"):
		soma = soma + v
		if(camp == "v"):
			v = 3
		if(camp == "e"):
			v = 2
		if(camp == "d"):
			v = 1
		
		t = t + 3
		print(t)
		print(soma)
	else:
		t = t + 0
	camp = input("digite o resultado: ")
total = (soma/t)*100
print(round(total,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 21, in <module>
    camp = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:41:11) 
-- CODE:
camp = input("digite o resultado: ")
camp = camp.lower
t = 0
v = 0
soma = 0
while(camp != "x"):
	if(camp == "v" or "e" or "d"):
		if(camp == "v"):
			v = 3
		if(camp == "e"):
			v = 2
		if(camp == "d"):
			v = 1
		t = t + 3
		print(t)
		print(soma)
	soma = soma + v
	else:
		t = t + 0
	camp = input("digite o resultado: ")
total = (soma/t)*100
print(round(total,2))
-- ERROR:
File "XXXX", line 18
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:41:26) 
-- CODE:
camp = input("digite o resultado: ")
camp = camp.lower
t = 0
v = 0
soma = 0
while(camp != "x"):
	if(camp == "v" or "e" or "d"):
		if(camp == "v"):
			v = 3
		if(camp == "e"):
			v = 2
		if(camp == "d"):
			v = 1
		t = t + 3
		print(t)
		print(soma)
	else:
		t = t + 0
	soma = soma + v 
	camp = input("digite o resultado: ")
total = (soma/t)*100
print(round(total,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 20, in <module>
    camp = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:42:09) 
-- CODE:
camp = input("digite o resultado: ")
camp = camp.lower
t = 0
v = 0
soma = 0
while(camp != "x"):
	if(camp == "v" or "e" or "d"):
		if(camp == "v"):
			v = 3
		if(camp == "e"):
			v = 2
		if(camp == "d"):
			v = 1
		t = t + 3
		
	else:
		t = t + 0
	soma = soma + v 
	camp = input("digite o resultado: ")
	print(soma)
	print(t)
total = (soma/t)*100
print(round(total,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 19, in <module>
    camp = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:42:16) 
-- CODE:
camp = input("digite o resultado: ")
camp = camp.lower
t = 0
v = 0
soma = 0
while(camp != "x"):
	if(camp == "v" or "e" or "d"):
		if(camp == "v"):
			v = 3
		if(camp == "e"):
			v = 2
		if(camp == "d"):
			v = 1
		t = t + 3
		
	else:
		t = t + 0
	soma = soma + v 
	camp = input("digite o resultado: ")
	print(soma)
	print(t)
total = (soma/t)*100
print(round(total,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 19, in <module>
    camp = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:42:45) 
-- CODE:
camp = input("digite o resultado: ")
camp = camp.lower
t = 0
v = 0
soma = 0
while(camp != "x"):
	if(camp == "v" or "e" or "d"):
		if(camp == "v"):
			v = 3
		if(camp == "e"):
			v = 2
		if(camp == "d"):
			v = 1
		t = t + 3
		
	else:
		t = t + 0
	soma = soma + v 
	print(soma)
	print(t)
	camp = input("digite o resultado: ")
total = (soma/t)*100
print(round(total,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 21, in <module>
    camp = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:43:24) 
-- CODE:
camp = input("digite o resultado: ")
camp = camp.lower
t = 0
v = 0
soma = 0
while(camp != "x"):
	if(camp == "v" or "e" or "d"):
		if(camp == "v"):
			v = 3
		elif(camp == "e"):
			v = 2
		else:
			v = 1
		t = t + 3
	soma = soma + v 
	print(soma)
	print(t)
	camp = input("digite o resultado: ")
total = (soma/t)*100
print(round(total,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 18, in <module>
    camp = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:43:35) 
-- CODE:
camp = input("digite o resultado: ")
camp = camp.lower
t = 0
v = 0
soma = 0
while(camp != "x"):
	if(camp == "v" or "e" or "d"):
		if(camp == "v"):
			v = 3
		elif(camp == "e"):
			v = 2
		else:
			v = 1
		t = t + 3
	soma = soma + v 
	print(soma)
	print(t)
	camp = input("digite o resultado: ")
total = (soma/t)*100
print(round(total,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 18, in <module>
    camp = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:44:06) 
-- CODE:
camp = input("digite o resultado: ")
camp = camp.lower
t = 0
v = 0
soma = 0
while(camp != "x"):
	if(camp == "v" or "e" or "d"):
		if(camp == "v"):
			v = 3
		elif(camp == "e"):
			v = 2
		else:
			v = 1
		t = t + 3
	soma = soma + v 
	print(soma)
	print(t)
	camp = input("digite o resultado: ")
total = (soma/t)*100
print(round(total,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 18, in <module>
    camp = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:45:15) 
-- CODE:
camp = input("digite o resultado: ")
camp = camp.lower
t = 0
v = 0
soma = 0
while(camp != "x"):
	if(camp == "v" or "e" or "d"):
		if(camp == "v"):
			v = 3
		elif(camp == "e"):
			v = 2
		else:
			v = 1
	else:
	t = t + 3
	soma = soma + v 
	print(soma)
	print(t)
	camp = input("digite o resultado: ")
total = (soma/t)*100
print(round(total,2))
-- ERROR:
File "XXXX", line 15
    t = t + 3
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:45:22) 
-- CODE:
camp = input("digite o resultado: ")
camp = camp.lower
t = 0
v = 0
soma = 0
while(camp != "x"):
	if(camp == "v" or "e" or "d"):
		if(camp == "v"):
			v = 3
		elif(camp == "e"):
			v = 2
		else:
			v = 1
	t = t + 3
	soma = soma + v 
	print(soma)
	print(t)
	camp = input("digite o resultado: ")
total = (soma/t)*100
print(round(total,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 18, in <module>
    camp = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:45:34) 
-- CODE:
camp = input("digite o resultado: ")
camp = camp.lower
t = 0
v = 0
soma = 0
while(camp != "x"):
	if(camp == "v" or "e" or "d"):
		if(camp == "v"):
			v = 3
		elif(camp == "e"):
			v = 2
		else:
			v = 1
	t = t + 3
	soma = soma + v 
	print(soma)
	print(t)
	camp = input("digite o resultado: ")
total = (soma/t)*100
print(round(total,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 18, in <module>
    camp = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:45:48) 
-- CODE:
camp = input("digite o resultado: ")
camp = camp.lower
t = 0
v = 0
soma = 0
while(camp != "x"):
	if(camp == "v" or "e" or "d"):
		if(camp == "v"):
			v = 3
		elif(camp == "e"):
			v = 2
		else:
			v = 1
	t = t + 3
	soma = soma + v 
	print(soma)
	print(t)
	camp = input("digite o resultado: ")
total = (soma/t)*100
print(round(total,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 18, in <module>
    camp = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:45:52) 
-- CODE:
camp = input("digite o resultado: ")
camp = camp.lower
t = 0
v = 0
soma = 0
while(camp != "x"):
	if(camp == "v" or "e" or "d"):
		if(camp == "v"):
			v = 3
		elif(camp == "e"):
			v = 2
		else:
			v = 1
	t = t + 3
	soma = soma + v 
	print(soma)
	print(t)
	camp = input("digite o resultado: ")
total = (soma/t)*100
print(round(total,2))
-- EXECUTION TIME:
0.665183
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1753/3092/main.py", line 18, in <module>
    camp = input()
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:46:06) 
-- CODE:
camp = input("digite o resultado: ")
camp = camp.lower
t = 0
v = 0
soma = 0
while(camp != "x"):
	if(camp == "v" or "e" or "d"):
		if(camp == "v"):
			v = 3
		elif(camp == "e"):
			v = 2
		else:
			v = 1
	t = t + 3
	soma = soma + v 
	print(soma)
	print(t)
	camp = input("digite o resultado: ")
total = (soma/t)*100
print(round(total,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 18, in <module>
    camp = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:46:59) 
-- CODE:
camp = input("digite o resultado: ")
camp = camp.lower
t = 0
v = 0
soma = 0
while(camp != "x"):
	if(camp == "v" or "e" or "d"):
		if(camp == "v"):
			v = 3
		elif(camp == "e"):
			v = 2
		else:
			v = 1
	else:
		t = 0 
	t = t + 3
	soma = soma + v 
	print(soma)
	print(t)
	camp = input("digite o resultado: ")
total = (soma/t)*100
print(round(total,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 20, in <module>
    camp = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:47:25) 
-- CODE:
camp = input("digite o resultado: ")
camp = camp.lower
t = 0
v = 0
soma = 0
while(camp != "x"):
	if(camp == "v" or "e" or "d"):
		if(camp == "v"):
			v = 3
		elif(camp == "e"):
			v = 2
		else:
			v = 1
	soma = soma + v 
	camp = input("digite o resultado: ")
total = (soma/t)*100
print(round(total,2))
-- EXECUTION TIME:
0.597268
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1753/3092/main.py", line 15, in <module>
    camp = input()
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:47:27) 
-- CODE:
camp = input("digite o resultado: ")
camp = camp.lower
t = 0
v = 0
soma = 0
while(camp != "x"):
	if(camp == "v" or "e" or "d"):
		if(camp == "v"):
			v = 3
		elif(camp == "e"):
			v = 2
		else:
			v = 1
	soma = soma + v 
	camp = input("digite o resultado: ")
total = (soma/t)*100
print(round(total,2))
-- EXECUTION TIME:
0.705364
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1753/3092/main.py", line 15, in <module>
    camp = input()
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:47:27) 
-- CODE:
camp = input("digite o resultado: ")
camp = camp.lower
t = 0
v = 0
soma = 0
while(camp != "x"):
	if(camp == "v" or "e" or "d"):
		if(camp == "v"):
			v = 3
		elif(camp == "e"):
			v = 2
		else:
			v = 1
	soma = soma + v 
	camp = input("digite o resultado: ")
total = (soma/t)*100
print(round(total,2))
-- EXECUTION TIME:
0.817059
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1753/3092/main.py", line 15, in <module>
    camp = input()
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:47:29) 
-- CODE:
camp = input("digite o resultado: ")
camp = camp.lower
t = 0
v = 0
soma = 0
while(camp != "x"):
	if(camp == "v" or "e" or "d"):
		if(camp == "v"):
			v = 3
		elif(camp == "e"):
			v = 2
		else:
			v = 1
	soma = soma + v 
	camp = input("digite o resultado: ")
total = (soma/t)*100
print(round(total,2))
-- EXECUTION TIME:
0.870184
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1753/3092/main.py", line 15, in <module>
    camp = input()
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:47:30) 
-- CODE:
camp = input("digite o resultado: ")
camp = camp.lower
t = 0
v = 0
soma = 0
while(camp != "x"):
	if(camp == "v" or "e" or "d"):
		if(camp == "v"):
			v = 3
		elif(camp == "e"):
			v = 2
		else:
			v = 1
	soma = soma + v 
	camp = input("digite o resultado: ")
total = (soma/t)*100
print(round(total,2))
-- EXECUTION TIME:
1.29654
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1753/3092/main.py", line 15, in <module>
    camp = input()
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:47:30) 
-- CODE:
camp = input("digite o resultado: ")
camp = camp.lower
t = 0
v = 0
soma = 0
while(camp != "x"):
	if(camp == "v" or "e" or "d"):
		if(camp == "v"):
			v = 3
		elif(camp == "e"):
			v = 2
		else:
			v = 1
	soma = soma + v 
	camp = input("digite o resultado: ")
total = (soma/t)*100
print(round(total,2))
-- EXECUTION TIME:
1.28514
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1753/3092/main.py", line 15, in <module>
    camp = input()
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:48:19) 
-- CODE:
camp = input("digite o resultado: ")
camp = camp.lower
t = 0
v = 0
soma = 0
while(camp != "x"):
		if(camp == "v"):
			v = 3
		if(camp == "e"):
			v = 2
		if(camp == "d")
			v = 1
	soma = soma + v 
	camp = input("digite o resultado: ")

	
total = (soma/t)*100
print(round(total,2))
-- ERROR:
File "XXXX", line 11
    if(camp == "d")
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:48:26) 
-- CODE:
camp = input("digite o resultado: ")
camp = camp.lower
t = 0
v = 0
soma = 0
while(camp != "x"):
		if(camp == "v"):
			v = 3
		if(camp == "e"):
			v = 2
		if(camp == "d"):
			v = 1
	soma = soma + v 
	camp = input("digite o resultado: ")

	
total = (soma/t)*100
print(round(total,2))
-- ERROR:
File "XXXX", line 13
    soma = soma + v 
                   ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:48:48) 
-- CODE:
camp = input("digite o resultado: ")
camp = camp.lower
t = 0
v = 0
soma = 0
while(camp != "x"):
		if(camp == "v"):
			v = 3
		if(camp == "e"):
			v = 2
		if(camp == "d"):
			v = 1
		soma = soma + v 
		camp = input("digite o resultado: ")

total = (soma/t)*100
print(round(total,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    camp = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:49:15) 
-- CODE:
camp = input("digite o resultado: ")
camp = camp.lower
t = 0
v = 0
soma = 0
while(camp != "x"):
		if(camp == "v"):
			v = 3
		if(camp == "e"):
			v = 2
		if(camp == "d"):
			v = 1
		t = t + 3
		soma = soma + v 
		camp = input("digite o resultado: ")

total = (soma/t)*100
print(round(total,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 15, in <module>
    camp = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:50:21) 
-- CODE:
camp = input("digite o resultado: ")
camp = camp.lower
t = 0
v = 0
soma = 0
while(camp != "x"):
	if(camp == "v" or "e" or "d"):
		if(camp == "v"):
			v = 3
		if(camp == "e"):
			v = 2
		if(camp == "d"):
			v = 1
	t = t + 3
	soma = soma + v 
	camp = input("digite o resultado: ")
	else:
	t = t + 0	
total = (soma/t)*100
print(round(total,2))
-- ERROR:
File "XXXX", line 17
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:50:59) 
-- CODE:
camp = input("digite o resultado: ")
camp = camp.lower
t = 0
v = 0
soma = 0
while(camp != "x"):
	if(camp == "v" or "e" or "d"):
		if(camp == "v"):
			v = 3
		if(camp == "e"):
			v = 2
		if(camp == "d"):
			v = 1
		t = t + 3
		soma = soma + v 
		camp = input("digite o resultado: ")
	else:
		t = t + 0
		camp = input("digite o resultado: ")
total = (soma/t)*100
print(round(total,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    camp = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:52:00) 
-- CODE:
camp = input("digite o resultado: ")
camp = camp.lower
t = 0
v = 0
soma = 0
while(camp != "x"):
	if(camp == "v" or "e" or "d"):
		if(camp == "v"):
			v = 3
		if(camp == "e"):
			v = 2
		if(camp == "d"):
			v = 1
		t = t + 3
		camp = input("digite o resultado: ")
	else:
		t = t + 0
		camp = input("digite o resultado: ")
	soma = soma + v 
	print(t)
	print(soma)
total = (soma/t)*100
print(round(total,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 15, in <module>
    camp = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:52:16) 
-- CODE:
camp = input("digite o resultado: ")
camp = camp.lower
t = 0
v = 0
soma = 0
while(camp != "x"):
	if(camp == "v" or "e" or "d"):
		if(camp == "v"):
			v = 3
		if(camp == "e"):
			v = 2
		if(camp == "d"):
			v = 1
		t = t + 3
		camp = input("digite o resultado: ")
	else:
		t = t + 0
		camp = input("digite o resultado: ")
	print(t)
	print(soma)
	soma = soma + v
total = (soma/t)*100
print(round(total,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 15, in <module>
    camp = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:54:51) 
-- CODE:
camp = input("digite o resultado: ")
camp = camp.lower
t = 0
v = 0
soma = 0
while(camp != "x"):
	if(camp == "v" or "e" or "d"):
		if(camp == "v"):
			v = 3
		if(camp == "e"):
			v = 2
		if(camp == "d"):
			v = 1
		t = t + 3
	else:
		t = t + 0
	soma = soma + v
	print(t)
	print(soma)
total = (soma/t)*100
print(round(total,2))
-- OUTPUT:
3
0
6
0
9
0
12
0
15
0
18
0
21
0
24
0
27
0
30
0
33
0
36
0
39
0
42
0
45
0
48
0
51
0
54
0
57
0
60
0
63
0
66
0
69
0
72
0
75
0
78
0
81
0
84
0
87
0
90
0
93
0
96
0
99
0
102
0
105
0
108
0
111
0
114
0
117
0
120
0
123
0
126
0
129
0
132
0
135
0
138
0
141
0
144
0
147
0
150
0
153
0
156
0
159
0
162
0
165
0
168
0
171
0
174
0
177
0
180
0
183
0
186
0
189
0
192
0
195
0
198
0
201
0
204
0
207
0
210
0
213
0
216
0
219
0
222
0
225
0
228
0
231
0
234
0
237
0
240
0
243
0
246
0
249
0
252
0
255
0
258
0
261
0
264
0
267
0
270
0
273
0
276
0
279
0
282
0
285
0
288
0
291
0
294
0
297
0
300
0
303
0
306
0
309
0
312
0
315
0
318
0
321
0
324
0
327
0
330
0
333
0
336
0
339
0
342
0
345
0
348
0
351
0
354
0
357
0
360
0
363
0
366
0
369
0
372
0
375
0
378
0
381
0
384
0
387
0
390
0
393
0
396
0
399
0
402
0
405
0
408
0
411
0
414
0
417
0
420
0
423
0
426
0
429
0
432
0
435
0
438
0
441
0
444
0
447
0
450
0
453
0
456
0
459
0
462
0
465
0
468
0
471
0
474
0
477
0
480
0
483
0
486
0
489
0
492
0
495
0
498
0
501
0
504
0
507
0
510
0
513
0
516
0
519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:55:05) 
-- CODE:
camp = input("digite o resultado: ")
camp = camp.lower
t = 0
v = 0
soma = 0
while(camp != "x"):
	if(camp == "v" or "e" or "d"):
		if(camp == "v"):
			v = 3
		if(camp == "e"):
			v = 2
		if(camp == "d"):
			v = 1
		t = t + 3
	else:
		t = t + 0
	soma = soma + v
	print(t)
	print(soma)
total = (soma/t)*100
print(round(total,2))
-- OUTPUT:
3
0
6
0
9
0
12
0
15
0
18
0
21
0
24
0
27
0
30
0
33
0
36
0
39
0
42
0
45
0
48
0
51
0
54
0
57
0
60
0
63
0
66
0
69
0
72
0
75
0
78
0
81
0
84
0
87
0
90
0
93
0
96
0
99
0
102
0
105
0
108
0
111
0
114
0
117
0
120
0
123
0
126
0
129
0
132
0
135
0
138
0
141
0
144
0
147
0
150
0
153
0
156
0
159
0
162
0
165
0
168
0
171
0
174
0
177
0
180
0
183
0
186
0
189
0
192
0
195
0
198
0
201
0
204
0
207
0
210
0
213
0
216
0
219
0
222
0
225
0
228
0
231
0
234
0
237
0
240
0
243
0
246
0
249
0
252
0
255
0
258
0
261
0
264
0
267
0
270
0
273
0
276
0
279
0
282
0
285
0
288
0
291
0
294
0
297
0
300
0
303
0
306
0
309
0
312
0
315
0
318
0
321
0
324
0
327
0
330
0
333
0
336
0
339
0
342
0
345
0
348
0
351
0
354
0
357
0
360
0
363
0
366
0
369
0
372
0
375
0
378
0
381
0
384
0
387
0
390
0
393
0
396
0
399
0
402
0
405
0
408
0
411
0
414
0
417
0
420
0
423
0
426
0
429
0
432
0
435
0
438
0
441
0
444
0
447
0
450
0
453
0
456
0
459
0
462
0
465
0
468
0
471
0
474
0
477
0
480
0
483
0
486
0
489
0
492
0
495
0
498
0
501
0
504
0
507
0
510
0
513
0
516
0
519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:55:05) 
-- CODE:
camp = input("digite o resultado: ")
camp = camp.lower
t = 0
v = 0
soma = 0
while(camp != "x"):
	if(camp == "v" or "e" or "d"):
		if(camp == "v"):
			v = 3
		if(camp == "e"):
			v = 2
		if(camp == "d"):
			v = 1
		t = t + 3
	else:
		t = t + 0
	soma = soma + v
	print(t)
	print(soma)
total = (soma/t)*100
print(round(total,2))
-- OUTPUT:
3
0
6
0
9
0
12
0
15
0
18
0
21
0
24
0
27
0
30
0
33
0
36
0
39
0
42
0
45
0
48
0
51
0
54
0
57
0
60
0
63
0
66
0
69
0
72
0
75
0
78
0
81
0
84
0
87
0
90
0
93
0
96
0
99
0
102
0
105
0
108
0
111
0
114
0
117
0
120
0
123
0
126
0
129
0
132
0
135
0
138
0
141
0
144
0
147
0
150
0
153
0
156
0
159
0
162
0
165
0
168
0
171
0
174
0
177
0
180
0
183
0
186
0
189
0
192
0
195
0
198
0
201
0
204
0
207
0
210
0
213
0
216
0
219
0
222
0
225
0
228
0
231
0
234
0
237
0
240
0
243
0
246
0
249
0
252
0
255
0
258
0
261
0
264
0
267
0
270
0
273
0
276
0
279
0
282
0
285
0
288
0
291
0
294
0
297
0
300
0
303
0
306
0
309
0
312
0
315
0
318
0
321
0
324
0
327
0
330
0
333
0
336
0
339
0
342
0
345
0
348
0
351
0
354
0
357
0
360
0
363
0
366
0
369
0
372
0
375
0
378
0
381
0
384
0
387
0
390
0
393
0
396
0
399
0
402
0
405
0
408
0
411
0
414
0
417
0
420
0
423
0
426
0
429
0
432
0
435
0
438
0
441
0
444
0
447
0
450
0
453
0
456
0
459
0
462
0
465
0
468
0
471
0
474
0
477
0
480
0
483
0
486
0
489
0
492
0
495
0
498
0
501
0
504
0
507
0
510
0
513
0
516
0
519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
